# digital-gift-card-processor

./: Cargo.toml  Readme.md
Almadar/: 20200012030046_46745_105.csv  20200012030046_46745_110.csv  20200012030046_46745_120.csv  20200012030046_46745_4.csv
LTT/: m.kmeshi_mkcard_U202002101027434304_23242543.txt  m.kmeshi_mkcard_U202002101052012345_23243843.txt  m.kmeshi_mkcard_U202002101052712345_23243513.txt  m.kmeshi_mkcard_U202002101052721324_23245543.txt  m.kmeshi_mkcard_U202002101052744004_23243543.txt
Libyana/: 10.000LYD__2020-03-12__.out.dec  100.000LYD__2020-03-12__.out.dec  30.000LYD__2020-03-12_.out.dec  40.000LYD__2020-03-12__.out.dec  5.000LYD__2020-03-12_.out.dec
src/: main.rs
