[package]
name = "digital-gift-card-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
xlsxwriter = "0.6.0"
inquire = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
